subcPrograms/Pmachine/pmachine.output
Terminals which are not used

   addressvalue


Grammar

    0 $accept: Grammar $end

    1 Grammar: /* empty */
    2        | InstructionSequence

    3 EndlineRepeater: EndlineRepeater endline
    4                | endline

    5 InstructionSequence: InstructionSequence Instruction EndlineRepeater
    6                    | Instruction EndlineRepeater
    7                    | EndlineRepeater

    8 Instruction: add_instruction
    9            | sub_instruction
   10            | mul_instruction
   11            | div_instruction
   12            | neg_instruction
   13            | and_instruction
   14            | or_instruction
   15            | not_instruction
   16            | equ_instruction
   17            | geq_instruction
   18            | leq_instruction
   19            | les_instruction
   20            | grt_instruction
   21            | neq_instruction
   22            | ldo_instruction
   23            | ldc_instruction
   24            | ind_instruction
   25            | sro_instruction
   26            | sto_instruction
   27            | ujp_instruction
   28            | fjp_instruction
   29            | ixj_instruction
   30            | ixa_instruction
   31            | inc_instruction
   32            | dec_instruction
   33            | chk_instruction
   34            | dpl_instruction
   35            | ldd_instruction
   36            | sli_instruction
   37            | new_instruction
   38            | lod_instruction
   39            | lda_instruction
   40            | str_instruction
   41            | mst_instruction
   42            | cup_instruction
   43            | ssp_instruction
   44            | sep_instruction
   45            | ent_instruction
   46            | retf_instruction
   47            | retp_instruction
   48            | movs_instruction
   49            | movd_instruction
   50            | smp_instruction
   51            | cupi_instruction
   52            | mstf_instruction
   53            | hlt_instruction
   54            | inp_instruction
   55            | out_instruction
   56            | conv_instruction
   57            | label_introduction

   58 numeric: real_specifier
   59        | integer_specifier

   60 arbitrary: numeric
   61          | boolean_specifier
   62          | character_specifier
   63          | address_specifier

   64 space: BLANK space
   65      | BLANK

   66 add_instruction: add_instr space numeric
   67                | add_instr error

   68 sub_instruction: sub_instr space numeric
   69                | sub_instr error

   70 mul_instruction: mul_instr space numeric
   71                | mul_instr error

   72 div_instruction: div_instr space numeric
   73                | div_instr error

   74 neg_instruction: neg_instr space numeric
   75                | neg_instr error

   76 and_instruction: and_instr

   77 or_instruction: or_instr

   78 not_instruction: not_instr

   79 equ_instruction: equ_instr space arbitrary
   80                | equ_instr error

   81 geq_instruction: geq_instr space arbitrary
   82                | geq_instr error

   83 leq_instruction: leq_instr space arbitrary
   84                | leq_instr error

   85 les_instruction: les_instr space arbitrary
   86                | les_instr error

   87 grt_instruction: grt_instr space arbitrary
   88                | grt_instr error

   89 neq_instruction: neq_instr space arbitrary
   90                | neq_instr error

   91 ldo_instruction: ldo_instr space arbitrary space integervalue
   92                | ldo_instr error

   93 ldc_instruction: ldc_instr space real_specifier space realvalue
   94                | ldc_instr space integer_specifier space integervalue
   95                | ldc_instr space boolean_specifier space boolvalue
   96                | ldc_instr space character_specifier space integervalue
   97                | ldc_instr space character_specifier space charactervalue
   98                | ldc_instr space address_specifier space integervalue
   99                | ldc_instr error

  100 ind_instruction: ind_instr space arbitrary
  101                | ind_instr error

  102 sro_instruction: sro_instr space arbitrary space integervalue
  103                | sro_instr error

  104 sto_instruction: sto_instr space arbitrary
  105                | sto_instr error

  106 ujp_instruction: ujp_instr space appliedlabel
  107                | ujp_instr error

  108 fjp_instruction: fjp_instr space appliedlabel
  109                | fjp_instr error

  110 ixj_instruction: ixj_instr space appliedlabel
  111                | ixj_instr error

  112 ixa_instruction: ixa_instr space integervalue
  113                | ixa_instr error

  114 inc_instruction: inc_instr space arbitrary space integervalue
  115                | inc_instr error

  116 dec_instruction: dec_instr space arbitrary space integervalue
  117                | dec_instr error

  118 chk_instruction: chk_instr space integervalue space integervalue
  119                | chk_instr error

  120 dpl_instruction: dpl_instr space arbitrary
  121                | dpl_instr error

  122 ldd_instruction: ldd_instr space integervalue
  123                | ldd_instr error

  124 sli_instruction: sli_instr space arbitrary
  125                | sli_instr error

  126 new_instruction: new_instr

  127 lod_instruction: lod_instr space arbitrary space integervalue space integervalue
  128                | lod_instr error

  129 lda_instruction: lda_instr space integervalue space integervalue
  130                | lda_instr error

  131 str_instruction: str_instr space arbitrary space integervalue space integervalue
  132                | str_instr error

  133 mst_instruction: mst_instr space integervalue
  134                | mst_instr error

  135 cup_instruction: cup_instr space integervalue space appliedlabel
  136                | cup_instr error

  137 ssp_instruction: ssp_instr space integervalue
  138                | ssp_instr error

  139 sep_instruction: sep_instr space integervalue
  140                | sep_instr error

  141 ent_instruction: ent_instr space integervalue space integervalue
  142                | ent_instr error

  143 retf_instruction: retf_instr

  144 retp_instruction: retp_instr

  145 movs_instruction: movs_instr space integervalue
  146                 | movs_instr error

  147 movd_instruction: movd_instr space integervalue
  148                 | movd_instr error

  149 smp_instruction: smp_instr space integervalue
  150                | smp_instr error

  151 cupi_instruction: cupi_instr space integervalue space integervalue
  152                 | cupi_instr error

  153 mstf_instruction: mstf_instr space integervalue space integervalue
  154                 | mstf_instr error

  155 hlt_instruction: hlt_instr

  156 inp_instruction: inp_instr space integer_specifier
  157                | inp_instr space real_specifier
  158                | inp_instr space boolean_specifier
  159                | inp_instr space character_specifier
  160                | inp_instr space address_specifier
  161                | inp_instr error

  162 out_instruction: out_instr space real_specifier space integer_specifier
  163                | out_instr space real_specifier
  164                | out_instr space integer_specifier
  165                | out_instr space character_specifier
  166                | out_instr space address_specifier
  167                | out_instr space boolean_specifier
  168                | out_instr error

  169 conv_instruction: conv_instr space arbitrary space arbitrary
  170                 | conv_instr error

  171 label_introduction: defininglabel


Terminals, with rules where they appear

$end (0) 0
error (256) 67 69 71 73 75 80 82 84 86 88 90 92 99 101 103 105 107
    109 111 113 115 117 119 121 123 125 128 130 132 134 136 138 140
    142 146 148 150 152 154 161 168 170
add_instr (258) 66 67
sub_instr (259) 68 69
mul_instr (260) 70 71
div_instr (261) 72 73
neg_instr (262) 74 75
and_instr (263) 76
or_instr (264) 77
not_instr (265) 78
equ_instr (266) 79 80
geq_instr (267) 81 82
leq_instr (268) 83 84
les_instr (269) 85 86
grt_instr (270) 87 88
neq_instr (271) 89 90
ldo_instr (272) 91 92
ldc_instr (273) 93 94 95 96 97 98 99
ind_instr (274) 100 101
sro_instr (275) 102 103
sto_instr (276) 104 105
ujp_instr (277) 106 107
fjp_instr (278) 108 109
ixj_instr (279) 110 111
ixa_instr (280) 112 113
inc_instr (281) 114 115
dec_instr (282) 116 117
chk_instr (283) 118 119
dpl_instr (284) 120 121
ldd_instr (285) 122 123
sli_instr (286) 124 125
new_instr (287) 126
lod_instr (288) 127 128
lda_instr (289) 129 130
str_instr (290) 131 132
mst_instr (291) 133 134
cup_instr (292) 135 136
ssp_instr (293) 137 138
sep_instr (294) 139 140
ent_instr (295) 141 142
retf_instr (296) 143
retp_instr (297) 144
movs_instr (298) 145 146
movd_instr (299) 147 148
smp_instr (300) 149 150
cupi_instr (301) 151 152
mstf_instr (302) 153 154
hlt_instr (303) 155
inp_instr (304) 156 157 158 159 160 161
out_instr (305) 162 163 164 165 166 167 168
conv_instr (306) 169 170
BLANK (307) 64 65
endline (308) 3 4
boolean_specifier (309) 61 95 158 167
real_specifier (310) 58 93 157 162 163
integer_specifier (311) 59 94 156 162 164
character_specifier (312) 62 96 97 159 165
address_specifier (313) 63 98 160 166
boolvalue (314) 95
integervalue (315) 91 94 96 98 102 112 114 116 118 122 127 129 131
    133 135 137 139 141 145 147 149 151 153
charactervalue (316) 97
realvalue (317) 93
addressvalue (318)
appliedlabel (319) 106 108 110 135
defininglabel (320) 171


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
Grammar (67)
    on left: 1 2, on right: 0
EndlineRepeater (68)
    on left: 3 4, on right: 3 5 6 7
InstructionSequence (69)
    on left: 5 6 7, on right: 2 5
Instruction (70)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57, on right: 5 6
numeric (71)
    on left: 58 59, on right: 60 66 68 70 72 74
arbitrary (72)
    on left: 60 61 62 63, on right: 79 81 83 85 87 89 91 100 102 104
    114 116 120 124 127 131 169
space (73)
    on left: 64 65, on right: 64 66 68 70 72 74 79 81 83 85 87 89 91
    93 94 95 96 97 98 100 102 104 106 108 110 112 114 116 118 120 122
    124 127 129 131 133 135 137 139 141 145 147 149 151 153 156 157
    158 159 160 162 163 164 165 166 167 169
add_instruction (74)
    on left: 66 67, on right: 8
sub_instruction (75)
    on left: 68 69, on right: 9
mul_instruction (76)
    on left: 70 71, on right: 10
div_instruction (77)
    on left: 72 73, on right: 11
neg_instruction (78)
    on left: 74 75, on right: 12
and_instruction (79)
    on left: 76, on right: 13
or_instruction (80)
    on left: 77, on right: 14
not_instruction (81)
    on left: 78, on right: 15
equ_instruction (82)
    on left: 79 80, on right: 16
geq_instruction (83)
    on left: 81 82, on right: 17
leq_instruction (84)
    on left: 83 84, on right: 18
les_instruction (85)
    on left: 85 86, on right: 19
grt_instruction (86)
    on left: 87 88, on right: 20
neq_instruction (87)
    on left: 89 90, on right: 21
ldo_instruction (88)
    on left: 91 92, on right: 22
ldc_instruction (89)
    on left: 93 94 95 96 97 98 99, on right: 23
ind_instruction (90)
    on left: 100 101, on right: 24
sro_instruction (91)
    on left: 102 103, on right: 25
sto_instruction (92)
    on left: 104 105, on right: 26
ujp_instruction (93)
    on left: 106 107, on right: 27
fjp_instruction (94)
    on left: 108 109, on right: 28
ixj_instruction (95)
    on left: 110 111, on right: 29
ixa_instruction (96)
    on left: 112 113, on right: 30
inc_instruction (97)
    on left: 114 115, on right: 31
dec_instruction (98)
    on left: 116 117, on right: 32
chk_instruction (99)
    on left: 118 119, on right: 33
dpl_instruction (100)
    on left: 120 121, on right: 34
ldd_instruction (101)
    on left: 122 123, on right: 35
sli_instruction (102)
    on left: 124 125, on right: 36
new_instruction (103)
    on left: 126, on right: 37
lod_instruction (104)
    on left: 127 128, on right: 38
lda_instruction (105)
    on left: 129 130, on right: 39
str_instruction (106)
    on left: 131 132, on right: 40
mst_instruction (107)
    on left: 133 134, on right: 41
cup_instruction (108)
    on left: 135 136, on right: 42
ssp_instruction (109)
    on left: 137 138, on right: 43
sep_instruction (110)
    on left: 139 140, on right: 44
ent_instruction (111)
    on left: 141 142, on right: 45
retf_instruction (112)
    on left: 143, on right: 46
retp_instruction (113)
    on left: 144, on right: 47
movs_instruction (114)
    on left: 145 146, on right: 48
movd_instruction (115)
    on left: 147 148, on right: 49
smp_instruction (116)
    on left: 149 150, on right: 50
cupi_instruction (117)
    on left: 151 152, on right: 51
mstf_instruction (118)
    on left: 153 154, on right: 52
hlt_instruction (119)
    on left: 155, on right: 53
inp_instruction (120)
    on left: 156 157 158 159 160 161, on right: 54
out_instruction (121)
    on left: 162 163 164 165 166 167 168, on right: 55
conv_instruction (122)
    on left: 169 170, on right: 56
label_introduction (123)
    on left: 171, on right: 57


state 0

    0 $accept: . Grammar $end

    add_instr      shift, and go to state 1
    sub_instr      shift, and go to state 2
    mul_instr      shift, and go to state 3
    div_instr      shift, and go to state 4
    neg_instr      shift, and go to state 5
    and_instr      shift, and go to state 6
    or_instr       shift, and go to state 7
    not_instr      shift, and go to state 8
    equ_instr      shift, and go to state 9
    geq_instr      shift, and go to state 10
    leq_instr      shift, and go to state 11
    les_instr      shift, and go to state 12
    grt_instr      shift, and go to state 13
    neq_instr      shift, and go to state 14
    ldo_instr      shift, and go to state 15
    ldc_instr      shift, and go to state 16
    ind_instr      shift, and go to state 17
    sro_instr      shift, and go to state 18
    sto_instr      shift, and go to state 19
    ujp_instr      shift, and go to state 20
    fjp_instr      shift, and go to state 21
    ixj_instr      shift, and go to state 22
    ixa_instr      shift, and go to state 23
    inc_instr      shift, and go to state 24
    dec_instr      shift, and go to state 25
    chk_instr      shift, and go to state 26
    dpl_instr      shift, and go to state 27
    ldd_instr      shift, and go to state 28
    sli_instr      shift, and go to state 29
    new_instr      shift, and go to state 30
    lod_instr      shift, and go to state 31
    lda_instr      shift, and go to state 32
    str_instr      shift, and go to state 33
    mst_instr      shift, and go to state 34
    cup_instr      shift, and go to state 35
    ssp_instr      shift, and go to state 36
    sep_instr      shift, and go to state 37
    ent_instr      shift, and go to state 38
    retf_instr     shift, and go to state 39
    retp_instr     shift, and go to state 40
    movs_instr     shift, and go to state 41
    movd_instr     shift, and go to state 42
    smp_instr      shift, and go to state 43
    cupi_instr     shift, and go to state 44
    mstf_instr     shift, and go to state 45
    hlt_instr      shift, and go to state 46
    inp_instr      shift, and go to state 47
    out_instr      shift, and go to state 48
    conv_instr     shift, and go to state 49
    endline        shift, and go to state 50
    defininglabel  shift, and go to state 51

    $default  reduce using rule 1 (Grammar)

    Grammar              go to state 52
    EndlineRepeater      go to state 53
    InstructionSequence  go to state 54
    Instruction          go to state 55
    add_instruction      go to state 56
    sub_instruction      go to state 57
    mul_instruction      go to state 58
    div_instruction      go to state 59
    neg_instruction      go to state 60
    and_instruction      go to state 61
    or_instruction       go to state 62
    not_instruction      go to state 63
    equ_instruction      go to state 64
    geq_instruction      go to state 65
    leq_instruction      go to state 66
    les_instruction      go to state 67
    grt_instruction      go to state 68
    neq_instruction      go to state 69
    ldo_instruction      go to state 70
    ldc_instruction      go to state 71
    ind_instruction      go to state 72
    sro_instruction      go to state 73
    sto_instruction      go to state 74
    ujp_instruction      go to state 75
    fjp_instruction      go to state 76
    ixj_instruction      go to state 77
    ixa_instruction      go to state 78
    inc_instruction      go to state 79
    dec_instruction      go to state 80
    chk_instruction      go to state 81
    dpl_instruction      go to state 82
    ldd_instruction      go to state 83
    sli_instruction      go to state 84
    new_instruction      go to state 85
    lod_instruction      go to state 86
    lda_instruction      go to state 87
    str_instruction      go to state 88
    mst_instruction      go to state 89
    cup_instruction      go to state 90
    ssp_instruction      go to state 91
    sep_instruction      go to state 92
    ent_instruction      go to state 93
    retf_instruction     go to state 94
    retp_instruction     go to state 95
    movs_instruction     go to state 96
    movd_instruction     go to state 97
    smp_instruction      go to state 98
    cupi_instruction     go to state 99
    mstf_instruction     go to state 100
    hlt_instruction      go to state 101
    inp_instruction      go to state 102
    out_instruction      go to state 103
    conv_instruction     go to state 104
    label_introduction   go to state 105


state 1

   66 add_instruction: add_instr . space numeric
   67                | add_instr . error

    error  shift, and go to state 106
    BLANK  shift, and go to state 107

    space  go to state 108


state 2

   68 sub_instruction: sub_instr . space numeric
   69                | sub_instr . error

    error  shift, and go to state 109
    BLANK  shift, and go to state 107

    space  go to state 110


state 3

   70 mul_instruction: mul_instr . space numeric
   71                | mul_instr . error

    error  shift, and go to state 111
    BLANK  shift, and go to state 107

    space  go to state 112


state 4

   72 div_instruction: div_instr . space numeric
   73                | div_instr . error

    error  shift, and go to state 113
    BLANK  shift, and go to state 107

    space  go to state 114


state 5

   74 neg_instruction: neg_instr . space numeric
   75                | neg_instr . error

    error  shift, and go to state 115
    BLANK  shift, and go to state 107

    space  go to state 116


state 6

   76 and_instruction: and_instr .

    $default  reduce using rule 76 (and_instruction)


state 7

   77 or_instruction: or_instr .

    $default  reduce using rule 77 (or_instruction)


state 8

   78 not_instruction: not_instr .

    $default  reduce using rule 78 (not_instruction)


state 9

   79 equ_instruction: equ_instr . space arbitrary
   80                | equ_instr . error

    error  shift, and go to state 117
    BLANK  shift, and go to state 107

    space  go to state 118


state 10

   81 geq_instruction: geq_instr . space arbitrary
   82                | geq_instr . error

    error  shift, and go to state 119
    BLANK  shift, and go to state 107

    space  go to state 120


state 11

   83 leq_instruction: leq_instr . space arbitrary
   84                | leq_instr . error

    error  shift, and go to state 121
    BLANK  shift, and go to state 107

    space  go to state 122


state 12

   85 les_instruction: les_instr . space arbitrary
   86                | les_instr . error

    error  shift, and go to state 123
    BLANK  shift, and go to state 107

    space  go to state 124


state 13

   87 grt_instruction: grt_instr . space arbitrary
   88                | grt_instr . error

    error  shift, and go to state 125
    BLANK  shift, and go to state 107

    space  go to state 126


state 14

   89 neq_instruction: neq_instr . space arbitrary
   90                | neq_instr . error

    error  shift, and go to state 127
    BLANK  shift, and go to state 107

    space  go to state 128


state 15

   91 ldo_instruction: ldo_instr . space arbitrary space integervalue
   92                | ldo_instr . error

    error  shift, and go to state 129
    BLANK  shift, and go to state 107

    space  go to state 130


state 16

   93 ldc_instruction: ldc_instr . space real_specifier space realvalue
   94                | ldc_instr . space integer_specifier space integervalue
   95                | ldc_instr . space boolean_specifier space boolvalue
   96                | ldc_instr . space character_specifier space integervalue
   97                | ldc_instr . space character_specifier space charactervalue
   98                | ldc_instr . space address_specifier space integervalue
   99                | ldc_instr . error

    error  shift, and go to state 131
    BLANK  shift, and go to state 107

    space  go to state 132


state 17

  100 ind_instruction: ind_instr . space arbitrary
  101                | ind_instr . error

    error  shift, and go to state 133
    BLANK  shift, and go to state 107

    space  go to state 134


state 18

  102 sro_instruction: sro_instr . space arbitrary space integervalue
  103                | sro_instr . error

    error  shift, and go to state 135
    BLANK  shift, and go to state 107

    space  go to state 136


state 19

  104 sto_instruction: sto_instr . space arbitrary
  105                | sto_instr . error

    error  shift, and go to state 137
    BLANK  shift, and go to state 107

    space  go to state 138


state 20

  106 ujp_instruction: ujp_instr . space appliedlabel
  107                | ujp_instr . error

    error  shift, and go to state 139
    BLANK  shift, and go to state 107

    space  go to state 140


state 21

  108 fjp_instruction: fjp_instr . space appliedlabel
  109                | fjp_instr . error

    error  shift, and go to state 141
    BLANK  shift, and go to state 107

    space  go to state 142


state 22

  110 ixj_instruction: ixj_instr . space appliedlabel
  111                | ixj_instr . error

    error  shift, and go to state 143
    BLANK  shift, and go to state 107

    space  go to state 144


state 23

  112 ixa_instruction: ixa_instr . space integervalue
  113                | ixa_instr . error

    error  shift, and go to state 145
    BLANK  shift, and go to state 107

    space  go to state 146


state 24

  114 inc_instruction: inc_instr . space arbitrary space integervalue
  115                | inc_instr . error

    error  shift, and go to state 147
    BLANK  shift, and go to state 107

    space  go to state 148


state 25

  116 dec_instruction: dec_instr . space arbitrary space integervalue
  117                | dec_instr . error

    error  shift, and go to state 149
    BLANK  shift, and go to state 107

    space  go to state 150


state 26

  118 chk_instruction: chk_instr . space integervalue space integervalue
  119                | chk_instr . error

    error  shift, and go to state 151
    BLANK  shift, and go to state 107

    space  go to state 152


state 27

  120 dpl_instruction: dpl_instr . space arbitrary
  121                | dpl_instr . error

    error  shift, and go to state 153
    BLANK  shift, and go to state 107

    space  go to state 154


state 28

  122 ldd_instruction: ldd_instr . space integervalue
  123                | ldd_instr . error

    error  shift, and go to state 155
    BLANK  shift, and go to state 107

    space  go to state 156


state 29

  124 sli_instruction: sli_instr . space arbitrary
  125                | sli_instr . error

    error  shift, and go to state 157
    BLANK  shift, and go to state 107

    space  go to state 158


state 30

  126 new_instruction: new_instr .

    $default  reduce using rule 126 (new_instruction)


state 31

  127 lod_instruction: lod_instr . space arbitrary space integervalue space integervalue
  128                | lod_instr . error

    error  shift, and go to state 159
    BLANK  shift, and go to state 107

    space  go to state 160


state 32

  129 lda_instruction: lda_instr . space integervalue space integervalue
  130                | lda_instr . error

    error  shift, and go to state 161
    BLANK  shift, and go to state 107

    space  go to state 162


state 33

  131 str_instruction: str_instr . space arbitrary space integervalue space integervalue
  132                | str_instr . error

    error  shift, and go to state 163
    BLANK  shift, and go to state 107

    space  go to state 164


state 34

  133 mst_instruction: mst_instr . space integervalue
  134                | mst_instr . error

    error  shift, and go to state 165
    BLANK  shift, and go to state 107

    space  go to state 166


state 35

  135 cup_instruction: cup_instr . space integervalue space appliedlabel
  136                | cup_instr . error

    error  shift, and go to state 167
    BLANK  shift, and go to state 107

    space  go to state 168


state 36

  137 ssp_instruction: ssp_instr . space integervalue
  138                | ssp_instr . error

    error  shift, and go to state 169
    BLANK  shift, and go to state 107

    space  go to state 170


state 37

  139 sep_instruction: sep_instr . space integervalue
  140                | sep_instr . error

    error  shift, and go to state 171
    BLANK  shift, and go to state 107

    space  go to state 172


state 38

  141 ent_instruction: ent_instr . space integervalue space integervalue
  142                | ent_instr . error

    error  shift, and go to state 173
    BLANK  shift, and go to state 107

    space  go to state 174


state 39

  143 retf_instruction: retf_instr .

    $default  reduce using rule 143 (retf_instruction)


state 40

  144 retp_instruction: retp_instr .

    $default  reduce using rule 144 (retp_instruction)


state 41

  145 movs_instruction: movs_instr . space integervalue
  146                 | movs_instr . error

    error  shift, and go to state 175
    BLANK  shift, and go to state 107

    space  go to state 176


state 42

  147 movd_instruction: movd_instr . space integervalue
  148                 | movd_instr . error

    error  shift, and go to state 177
    BLANK  shift, and go to state 107

    space  go to state 178


state 43

  149 smp_instruction: smp_instr . space integervalue
  150                | smp_instr . error

    error  shift, and go to state 179
    BLANK  shift, and go to state 107

    space  go to state 180


state 44

  151 cupi_instruction: cupi_instr . space integervalue space integervalue
  152                 | cupi_instr . error

    error  shift, and go to state 181
    BLANK  shift, and go to state 107

    space  go to state 182


state 45

  153 mstf_instruction: mstf_instr . space integervalue space integervalue
  154                 | mstf_instr . error

    error  shift, and go to state 183
    BLANK  shift, and go to state 107

    space  go to state 184


state 46

  155 hlt_instruction: hlt_instr .

    $default  reduce using rule 155 (hlt_instruction)


state 47

  156 inp_instruction: inp_instr . space integer_specifier
  157                | inp_instr . space real_specifier
  158                | inp_instr . space boolean_specifier
  159                | inp_instr . space character_specifier
  160                | inp_instr . space address_specifier
  161                | inp_instr . error

    error  shift, and go to state 185
    BLANK  shift, and go to state 107

    space  go to state 186


state 48

  162 out_instruction: out_instr . space real_specifier space integer_specifier
  163                | out_instr . space real_specifier
  164                | out_instr . space integer_specifier
  165                | out_instr . space character_specifier
  166                | out_instr . space address_specifier
  167                | out_instr . space boolean_specifier
  168                | out_instr . error

    error  shift, and go to state 187
    BLANK  shift, and go to state 107

    space  go to state 188


state 49

  169 conv_instruction: conv_instr . space arbitrary space arbitrary
  170                 | conv_instr . error

    error  shift, and go to state 189
    BLANK  shift, and go to state 107

    space  go to state 190


state 50

    4 EndlineRepeater: endline .

    $default  reduce using rule 4 (EndlineRepeater)


state 51

  171 label_introduction: defininglabel .

    $default  reduce using rule 171 (label_introduction)


state 52

    0 $accept: Grammar . $end

    $end  shift, and go to state 191


state 53

    3 EndlineRepeater: EndlineRepeater . endline
    7 InstructionSequence: EndlineRepeater .

    endline  shift, and go to state 192

    $default  reduce using rule 7 (InstructionSequence)


state 54

    2 Grammar: InstructionSequence .
    5 InstructionSequence: InstructionSequence . Instruction EndlineRepeater

    add_instr      shift, and go to state 1
    sub_instr      shift, and go to state 2
    mul_instr      shift, and go to state 3
    div_instr      shift, and go to state 4
    neg_instr      shift, and go to state 5
    and_instr      shift, and go to state 6
    or_instr       shift, and go to state 7
    not_instr      shift, and go to state 8
    equ_instr      shift, and go to state 9
    geq_instr      shift, and go to state 10
    leq_instr      shift, and go to state 11
    les_instr      shift, and go to state 12
    grt_instr      shift, and go to state 13
    neq_instr      shift, and go to state 14
    ldo_instr      shift, and go to state 15
    ldc_instr      shift, and go to state 16
    ind_instr      shift, and go to state 17
    sro_instr      shift, and go to state 18
    sto_instr      shift, and go to state 19
    ujp_instr      shift, and go to state 20
    fjp_instr      shift, and go to state 21
    ixj_instr      shift, and go to state 22
    ixa_instr      shift, and go to state 23
    inc_instr      shift, and go to state 24
    dec_instr      shift, and go to state 25
    chk_instr      shift, and go to state 26
    dpl_instr      shift, and go to state 27
    ldd_instr      shift, and go to state 28
    sli_instr      shift, and go to state 29
    new_instr      shift, and go to state 30
    lod_instr      shift, and go to state 31
    lda_instr      shift, and go to state 32
    str_instr      shift, and go to state 33
    mst_instr      shift, and go to state 34
    cup_instr      shift, and go to state 35
    ssp_instr      shift, and go to state 36
    sep_instr      shift, and go to state 37
    ent_instr      shift, and go to state 38
    retf_instr     shift, and go to state 39
    retp_instr     shift, and go to state 40
    movs_instr     shift, and go to state 41
    movd_instr     shift, and go to state 42
    smp_instr      shift, and go to state 43
    cupi_instr     shift, and go to state 44
    mstf_instr     shift, and go to state 45
    hlt_instr      shift, and go to state 46
    inp_instr      shift, and go to state 47
    out_instr      shift, and go to state 48
    conv_instr     shift, and go to state 49
    defininglabel  shift, and go to state 51

    $default  reduce using rule 2 (Grammar)

    Instruction         go to state 193
    add_instruction     go to state 56
    sub_instruction     go to state 57
    mul_instruction     go to state 58
    div_instruction     go to state 59
    neg_instruction     go to state 60
    and_instruction     go to state 61
    or_instruction      go to state 62
    not_instruction     go to state 63
    equ_instruction     go to state 64
    geq_instruction     go to state 65
    leq_instruction     go to state 66
    les_instruction     go to state 67
    grt_instruction     go to state 68
    neq_instruction     go to state 69
    ldo_instruction     go to state 70
    ldc_instruction     go to state 71
    ind_instruction     go to state 72
    sro_instruction     go to state 73
    sto_instruction     go to state 74
    ujp_instruction     go to state 75
    fjp_instruction     go to state 76
    ixj_instruction     go to state 77
    ixa_instruction     go to state 78
    inc_instruction     go to state 79
    dec_instruction     go to state 80
    chk_instruction     go to state 81
    dpl_instruction     go to state 82
    ldd_instruction     go to state 83
    sli_instruction     go to state 84
    new_instruction     go to state 85
    lod_instruction     go to state 86
    lda_instruction     go to state 87
    str_instruction     go to state 88
    mst_instruction     go to state 89
    cup_instruction     go to state 90
    ssp_instruction     go to state 91
    sep_instruction     go to state 92
    ent_instruction     go to state 93
    retf_instruction    go to state 94
    retp_instruction    go to state 95
    movs_instruction    go to state 96
    movd_instruction    go to state 97
    smp_instruction     go to state 98
    cupi_instruction    go to state 99
    mstf_instruction    go to state 100
    hlt_instruction     go to state 101
    inp_instruction     go to state 102
    out_instruction     go to state 103
    conv_instruction    go to state 104
    label_introduction  go to state 105


state 55

    6 InstructionSequence: Instruction . EndlineRepeater

    endline  shift, and go to state 50

    EndlineRepeater  go to state 194


state 56

    8 Instruction: add_instruction .

    $default  reduce using rule 8 (Instruction)


state 57

    9 Instruction: sub_instruction .

    $default  reduce using rule 9 (Instruction)


state 58

   10 Instruction: mul_instruction .

    $default  reduce using rule 10 (Instruction)


state 59

   11 Instruction: div_instruction .

    $default  reduce using rule 11 (Instruction)


state 60

   12 Instruction: neg_instruction .

    $default  reduce using rule 12 (Instruction)


state 61

   13 Instruction: and_instruction .

    $default  reduce using rule 13 (Instruction)


state 62

   14 Instruction: or_instruction .

    $default  reduce using rule 14 (Instruction)


state 63

   15 Instruction: not_instruction .

    $default  reduce using rule 15 (Instruction)


state 64

   16 Instruction: equ_instruction .

    $default  reduce using rule 16 (Instruction)


state 65

   17 Instruction: geq_instruction .

    $default  reduce using rule 17 (Instruction)


state 66

   18 Instruction: leq_instruction .

    $default  reduce using rule 18 (Instruction)


state 67

   19 Instruction: les_instruction .

    $default  reduce using rule 19 (Instruction)


state 68

   20 Instruction: grt_instruction .

    $default  reduce using rule 20 (Instruction)


state 69

   21 Instruction: neq_instruction .

    $default  reduce using rule 21 (Instruction)


state 70

   22 Instruction: ldo_instruction .

    $default  reduce using rule 22 (Instruction)


state 71

   23 Instruction: ldc_instruction .

    $default  reduce using rule 23 (Instruction)


state 72

   24 Instruction: ind_instruction .

    $default  reduce using rule 24 (Instruction)


state 73

   25 Instruction: sro_instruction .

    $default  reduce using rule 25 (Instruction)


state 74

   26 Instruction: sto_instruction .

    $default  reduce using rule 26 (Instruction)


state 75

   27 Instruction: ujp_instruction .

    $default  reduce using rule 27 (Instruction)


state 76

   28 Instruction: fjp_instruction .

    $default  reduce using rule 28 (Instruction)


state 77

   29 Instruction: ixj_instruction .

    $default  reduce using rule 29 (Instruction)


state 78

   30 Instruction: ixa_instruction .

    $default  reduce using rule 30 (Instruction)


state 79

   31 Instruction: inc_instruction .

    $default  reduce using rule 31 (Instruction)


state 80

   32 Instruction: dec_instruction .

    $default  reduce using rule 32 (Instruction)


state 81

   33 Instruction: chk_instruction .

    $default  reduce using rule 33 (Instruction)


state 82

   34 Instruction: dpl_instruction .

    $default  reduce using rule 34 (Instruction)


state 83

   35 Instruction: ldd_instruction .

    $default  reduce using rule 35 (Instruction)


state 84

   36 Instruction: sli_instruction .

    $default  reduce using rule 36 (Instruction)


state 85

   37 Instruction: new_instruction .

    $default  reduce using rule 37 (Instruction)


state 86

   38 Instruction: lod_instruction .

    $default  reduce using rule 38 (Instruction)


state 87

   39 Instruction: lda_instruction .

    $default  reduce using rule 39 (Instruction)


state 88

   40 Instruction: str_instruction .

    $default  reduce using rule 40 (Instruction)


state 89

   41 Instruction: mst_instruction .

    $default  reduce using rule 41 (Instruction)


state 90

   42 Instruction: cup_instruction .

    $default  reduce using rule 42 (Instruction)


state 91

   43 Instruction: ssp_instruction .

    $default  reduce using rule 43 (Instruction)


state 92

   44 Instruction: sep_instruction .

    $default  reduce using rule 44 (Instruction)


state 93

   45 Instruction: ent_instruction .

    $default  reduce using rule 45 (Instruction)


state 94

   46 Instruction: retf_instruction .

    $default  reduce using rule 46 (Instruction)


state 95

   47 Instruction: retp_instruction .

    $default  reduce using rule 47 (Instruction)


state 96

   48 Instruction: movs_instruction .

    $default  reduce using rule 48 (Instruction)


state 97

   49 Instruction: movd_instruction .

    $default  reduce using rule 49 (Instruction)


state 98

   50 Instruction: smp_instruction .

    $default  reduce using rule 50 (Instruction)


state 99

   51 Instruction: cupi_instruction .

    $default  reduce using rule 51 (Instruction)


state 100

   52 Instruction: mstf_instruction .

    $default  reduce using rule 52 (Instruction)


state 101

   53 Instruction: hlt_instruction .

    $default  reduce using rule 53 (Instruction)


state 102

   54 Instruction: inp_instruction .

    $default  reduce using rule 54 (Instruction)


state 103

   55 Instruction: out_instruction .
